# docs/swagger.json
@@ -11,7 +11,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Returns user information based on their ID.",
+                "description": "Returns user information.",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,9 +19,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
-                "summary": "Retrieve user by ID",
+                "summary": "Retrieve user own account",
                 "responses": {
                     "200": {
                         "description": "Successful response",
@@ -29,16 +29,22 @@
                             "$ref": "#/definitions/dto.Account"
                         }
                     },
+                    "401": {
+                        "description": "Authorization header wasn't found, Token is not bearer",
+                        "schema": {
+                            "$ref": "#/definitions/resp.JsonError"
+                        }
+                    },
                     "404": {
                         "description": "This user wasn`t found.",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -54,7 +60,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "Log in a user",
                 "parameters": [
@@ -78,25 +84,25 @@
                     "400": {
                         "description": "Incorrect data",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "401": {
                         "description": "Incorrect email or password",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "404": {
                         "description": "This user wasn't found.",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -117,20 +123,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "Log out a user",
                 "responses": {
                     "200": {
                         "description": "Logout success.",
                         "schema": {
-                            "$ref": "#/definitions/dto.Message"
+                            "$ref": "#/definitions/resp.Message"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -146,7 +152,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "Refresh user tokens",
                 "responses": {
@@ -159,19 +165,19 @@
                     "401": {
                         "description": "Token is invalid",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "404": {
                         "description": "Your token wasn't found., This user wasn't found.",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -192,49 +198,38 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
                 "summary": "Delete user account",
-                "parameters": [
-                    {
-                        "description": "Delete User Request",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.DeleteUser"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Ok.",
                         "schema": {
-                            "$ref": "#/definitions/dto.Message"
+                            "$ref": "#/definitions/resp.Message"
                         }
                     },
                     "400": {
                         "description": "Incorrect data",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "401": {
                         "description": "Authorization header wasn`t found, Token is not bearer",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "403": {
                         "description": "This resource is forbidden",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -255,7 +250,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
                 "summary": "Update user information",
                 "parameters": [
@@ -273,43 +268,43 @@
                     "200": {
                         "description": "Updated.",
                         "schema": {
-                            "$ref": "#/definitions/dto.Message"
+                            "$ref": "#/definitions/resp.Message"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "401": {
                         "description": "Authorization header wasn't found, Token is not bearer",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "403": {
                         "description": "This resource is forbidden",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "404": {
                         "description": "This user wasn't found",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "409": {
                         "description": "User with this email already exists",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -325,7 +320,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
                 "summary": "Create User",
                 "parameters": [
@@ -349,25 +344,25 @@
                     "400": {
                         "description": "Incorrect data",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "403": {
                         "description": "Incorrect password",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "409": {
                         "description": "User with this email already exist",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -388,7 +383,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
                 "summary": "Verify user activation code",
                 "parameters": [
@@ -406,37 +401,37 @@
                     "200": {
                         "description": "Verified.",
                         "schema": {
-                            "$ref": "#/definitions/dto.Message"
+                            "$ref": "#/definitions/resp.Message"
                         }
                     },
                     "400": {
                         "description": "Your activation code is wrong., Bad string length",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "401": {
                         "description": "Authorization header wasn`t found, Token is not bearer",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "403": {
                         "description": "This resource is forbidden",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "404": {
                         "description": "This code wasn`t found.",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -457,44 +452,44 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
                 "summary": "Resend verification code",
                 "responses": {
                     "200": {
                         "description": "Ok.",
                         "schema": {
-                            "$ref": "#/definitions/dto.Message"
+                            "$ref": "#/definitions/resp.Message"
                         }
                     },
                     "400": {
                         "description": "Incorrect data",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "403": {
                         "description": "This resource is forbidden",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "404": {
                         "description": "User not found",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     },
                     "500": {
                         "description": "Something going wrong...",
                         "schema": {
-                            "$ref": "#/definitions/dto.JsonError"
+                            "$ref": "#/definitions/resp.JsonError"
                         }
                     }
                 }
@@ -516,6 +511,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
                 }
             }
         },
@@ -546,24 +544,6 @@
                 }
             }
         },
-        "dto.DeleteUser": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 8
-                }
-            }
-        },
-        "dto.JsonError": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.Login": {
             "type": "object",
             "required": [
@@ -578,14 +558,6 @@
                     "type": "string",
                     "maxLength": 50,
                     "minLength": 8
-                }
-            }
-        },
-        "dto.Message": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
                 }
             }
         },
@@ -621,6 +593,22 @@
                     "type": "string",
                     "maxLength": 50,
                     "minLength": 8
+                }
+            }
+        },
+        "resp.JsonError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "resp.Message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         }
