# internal/controller/http/v1/dto/account.go
@@ -1,10 +1,11 @@
 package dto
 
 type Account struct {
-	Id    uint64 `json:"id"`
-	Email string `json:"email"`
-	Name  string `json:"name"`
-	Age   int    `json:"age"`
+	Id       uint64 `json:"id"`
+	Email    string `json:"email"`
+	Name     string `json:"name"`
+	Age      int    `json:"age"`
+	Verified bool   `json:"verified"`
 }
 
 type CreateUser struct {
@@ -20,23 +21,4 @@ type UpdateUser struct {
 	Password    string `json:"password"    validate:"omitempty,min=8,max=50,password"`
 	OldPassword string `json:"oldPassword" validate:"omitempty,min=8,max=50,password"`
 	Age         int    `json:"age"         validate:"omitempty,gte=0,lte=200"`
-}
-
-type DeleteUser struct {
-	Password string `json:"password" validate:"min=8,max=50,password"`
-}
-
-type Message struct {
-	Message string `json:"message"`
-}
-
-func NewMessage(msg string) *Message {
-	return &Message{
-		Message: msg,
-	}
-}
-
-// JsonError use only for doc and represent e.JsonError
-type JsonError struct {
-	Error string `json:"error"`
 }
