# internal/controller/http/v1/pkg/account/account.go
@@ -4,30 +4,35 @@ import (
 	conv "app/internal/controller/http/v1/converter"
 	"app/internal/controller/http/v1/dto"
 	"app/internal/controller/http/v1/validator"
+	"app/internal/entity"
 
 	"github.com/gin-gonic/gin"
 	"github.com/gosuit/gins"
+	"github.com/gosuit/httper"
 )
 
 type Account struct {
 	usecase UserUseCase
+	cookie  *httper.Cookie
 }
 
-func New(uc UserUseCase) *Account {
+func New(uc UserUseCase, cookie *httper.Cookie) *Account {
 	return &Account{
 		usecase: uc,
+		cookie:  cookie,
 	}
 }
 
-// @Summary Retrieve user by ID
-// @Description Returns user information based on their ID.
-// @Tags account
+// @Summary Retrieve user own account
+// @Description Returns user information.
+// @Tags Account
 // @Accept json
 // @Produce json
 // @Security Bearer
 // @Success 200 {object} dto.Account "Successful response"
-// @Failure 404 {object} dto.JsonError "This user wasn`t found."
-// @Failure 500 {object} dto.JsonError "Something going wrong..."
+// @Failure 401 {object} resp.JsonError "Authorization header wasn't found, Token is not bearer"
+// @Failure 404 {object} resp.JsonError "This user wasn`t found."
+// @Failure 500 {object} resp.JsonError "Something going wrong..."
 // @Router /account/ [get]
 func (a *Account) Get(c *gin.Context) {
 	ctx := gins.GetCtx(c)
@@ -44,18 +49,17 @@ func (a *Account) Get(c *gin.Context) {
 	c.JSON(ok, result)
 }
 
-// @title Create User
 // @Summary Create User
 // @Description Creates a new user and returns access tokens.
-// @Tags account
+// @Tags Account
 // @Accept json
 // @Produce json
 // @Param body body dto.CreateUser true "Data for creating a user"
 // @Success 200 {object} dto.Token "Successful response with token"
-// @Failure 400 {object} dto.JsonError "Incorrect data"
-// @Failure 403 {object} dto.JsonError "Incorrect password"
-// @Failure 409 {object} dto.JsonError "User with this email already exist"
-// @Failure 500 {object} dto.JsonError "Something going wrong..."
+// @Failure 400 {object} resp.JsonError "Incorrect data"
+// @Failure 403 {object} resp.JsonError "Incorrect password"
+// @Failure 409 {object} resp.JsonError "User with this email already exist"
+// @Failure 500 {object} resp.JsonError "Something going wrong..."
 // @Router /account/new [post]
 func (a *Account) Create(c *gin.Context) {
 	ctx := gins.GetCtx(c)
@@ -79,7 +83,10 @@ func (a *Account) Create(c *gin.Context) {
 		return
 	}
 
-	c.SetCookie(cookieName, tokens.Refresh, cookieAge, cookiePath, cookieHost, false, true)
+	c.SetCookie(
+		a.cookie.Name, tokens.Refresh, a.cookie.Age, a.cookie.Path,
+		a.cookie.Host, a.cookie.Secure, a.cookie.HttpOnly,
+	)
 
 	result := conv.DtoToken(tokens)
 
@@ -88,19 +95,19 @@ func (a *Account) Create(c *gin.Context) {
 
 // @Summary Update user information
 // @Description Updates the user's information including password.
-// @Tags account
+// @Tags Account
 // @Accept json
 // @Produce json
 // @Param body body dto.UpdateUser true "User update data"
 // @Security Bearer
-// @Success 200 {object} dto.Message "Updated."
-// @Failure 400 {object} dto.JsonError "Incorrect data., Your activation code is wrong."
-// @Failure 400 {object} dto.JsonError
-// @Failure 401 {object} dto.JsonError "Authorization header wasn't found, Token is not bearer"
-// @Failure 403 {object} dto.JsonError "This resource is forbidden"
-// @Failure 404 {object} dto.JsonError "This user wasn't found"
-// @Failure 409 {object} dto.JsonError "User with this email already exists"
-// @Failure 500 {object} dto.JsonError "Something going wrong..."
+// @Success 200 {object} resp.Message "Updated."
+// @Failure 400 {object} resp.JsonError "Incorrect data., Your activation code is wrong."
+// @Failure 400 {object} resp.JsonError
+// @Failure 401 {object} resp.JsonError "Authorization header wasn't found, Token is not bearer"
+// @Failure 403 {object} resp.JsonError "This resource is forbidden"
+// @Failure 404 {object} resp.JsonError "This user wasn't found"
+// @Failure 409 {object} resp.JsonError "User with this email already exists"
+// @Failure 500 {object} resp.JsonError "Something going wrong..."
 // @Router /account/edit [patch]
 func (a *Account) Update(c *gin.Context) {
 	ctx := gins.GetCtx(c)
@@ -132,17 +139,17 @@ func (a *Account) Update(c *gin.Context) {
 
 // @Summary Verify user activation code
 // @Description Verifies the provided activation code for the user.
-// @Tags account
+// @Tags Account
 // @Accept json
 // @Produce json
 // @Security Bearer
 // @Param code path string true "Activation Code" minlength(6) maxlength(6)
-// @Success 200 {object} dto.Message "Verified."
-// @Failure 400 {object} dto.JsonError "Your activation code is wrong., Bad string length"
-// @Failure 401 {object} dto.JsonError "Authorization header wasn`t found, Token is not bearer"
-// @Failure 403 {object} dto.JsonError "This resource is forbidden"
-// @Failure 404 {object} dto.JsonError "This code wasn`t found."
-// @Failure 500 {object} dto.JsonError "Something going wrong..."
+// @Success 200 {object} resp.Message "Verified."
+// @Failure 400 {object} resp.JsonError "Your activation code is wrong., Bad string length"
+// @Failure 401 {object} resp.JsonError "Authorization header wasn`t found, Token is not bearer"
+// @Failure 403 {object} resp.JsonError "This resource is forbidden"
+// @Failure 404 {object} resp.JsonError "This code wasn`t found."
+// @Failure 500 {object} resp.JsonError "Something going wrong..."
 // @Router /account/verify/confirm/{code} [get]
 func (a *Account) Verify(c *gin.Context) {
 	ctx := gins.GetCtx(c)
@@ -166,16 +173,16 @@ func (a *Account) Verify(c *gin.Context) {
 
 // @Summary Resend verification code
 // @Description Resends a verification code to the user's email or phone number.
-// @Tags account
+// @Tags Account
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Success 200 {object} dto.Message "Ok."
-// @Failure 400 {object} dto.JsonError "Incorrect data"
-// @Failure 401 {object} dto.JsonError `"This resource is forbidden, Authorization header wasn`t found, Token is not bearer"`
-// @Failure 403 {object} dto.JsonError "This resource is forbidden"
-// @Failure 404 {object} dto.JsonError "User not found"
-// @Failure 500 {object} dto.JsonError "Something going wrong..."
+// @Success 200 {object} resp.Message "Ok."
+// @Failure 400 {object} resp.JsonError "Incorrect data"
+// @Failure 401 {object} resp.JsonError `"This resource is forbidden, Authorization header wasn`t found, Token is not bearer"`
+// @Failure 403 {object} resp.JsonError "This resource is forbidden"
+// @Failure 404 {object} resp.JsonError "User not found"
+// @Failure 500 {object} resp.JsonError "Something going wrong..."
 // @Router /account/verify/resend [get]
 func (a *Account) ResendCode(c *gin.Context) {
 	ctx := gins.GetCtx(c)
@@ -192,35 +199,24 @@ func (a *Account) ResendCode(c *gin.Context) {
 
 // @Summary Delete user account
 // @Description Deletes a user account by ID.
-// @Tags account
+// @Tags Account
 // @Accept json
 // @Produce json
-// @Param body body dto.DeleteUser true "Delete User Request"
 // @Security Bearer
-// @Success 200 {object} dto.Message "Ok."
-// @Failure 400 {object} dto.JsonError "Incorrect data"
-// @Failure 401 {object} dto.JsonError "Authorization header wasn`t found, Token is not bearer"
-// @Failure 403 {object} dto.JsonError "This resource is forbidden"
-// @Failure 500 {object} dto.JsonError "Something going wrong..."
+// @Success 200 {object} resp.Message "Ok."
+// @Failure 400 {object} resp.JsonError "Incorrect data"
+// @Failure 401 {object} resp.JsonError "Authorization header wasn`t found, Token is not bearer"
+// @Failure 403 {object} resp.JsonError "This resource is forbidden"
+// @Failure 500 {object} resp.JsonError "Something going wrong..."
 // @Router /account/delete [delete]
 func (a *Account) Delete(c *gin.Context) {
 	ctx := gins.GetCtx(c)
+
 	userId := c.GetUint64("userId")
 
-	var body dto.DeleteUser
-
-	if err := c.ShouldBindJSON(&body); err != nil {
-		gins.Abort(c, badReqErr.WithErr(err))
-		return
+	user := &entity.User{
+		Id: userId,
 	}
-
-	if err := validator.Struct(body, validator.Password); err != nil {
-		gins.Abort(c, err)
-		return
-	}
-
-	user := conv.EntityDelete(body)
-	user.Id = userId
 
 	err := a.usecase.Delete(ctx, user)
 	if err != nil {
