# internal/controller/http/v1/router.go
@@ -9,6 +9,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/gosuit/gins"
+	"github.com/gosuit/httper"
 	"github.com/gosuit/lec"
 	swaggerfiles "github.com/swaggo/files"     // swagger embed files
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
@@ -21,15 +22,16 @@ type Router struct {
 }
 
 type Config struct {
-	Swagger swagger.SwaggerSpec `confy:"swagger"`
+	Swagger       swagger.SwaggerSpec `confy:"swagger"`
+	RefreshCookie httper.Cookie       `confy:"refresh_cookie"`
 }
 
 func New(uc *usecase.UseCase, cfg *Config) *Router {
 	swagger.SetSwaggerConfig(cfg.Swagger)
 
 	return &Router{
-		account: account.New(uc.User),
-		auth:    auth.New(uc.Auth),
+		account: account.New(uc.User, &cfg.RefreshCookie),
+		auth:    auth.New(uc.Auth, &cfg.RefreshCookie),
 		mid:     middleware.New(uc.Auth),
 	}
 }
@@ -51,13 +53,14 @@ func (r *Router) InitRoutes(c lec.Context, h *gin.RouterGroup) *gin.RouterGroup 
 func (r *Router) initAccountRoutes(h *gin.RouterGroup) *gin.RouterGroup {
 	router := h.Group("/account")
 	{
-		router.GET("/", r.mid.CheckAccess(), r.account.Get)
 		router.PATCH("/edit", r.mid.CheckAccess(), r.account.Update)
 		router.POST("/new", r.account.Create)
 		router.GET("/verify/confirm/:code", r.mid.CheckAccess(), r.account.Verify)
 		router.GET("/verify/resend", r.mid.CheckAccess(), r.account.ResendCode)
 		router.DELETE("/delete", r.mid.CheckAccess(), r.account.Delete)
 	}
+
+	h.GET("/account", r.mid.CheckAccess(), r.account.Get)
 
 	return router
 }
