# internal/controller/response/response.go
@@ -7,3 +7,8 @@ type Message struct {
 func NewMessage(msg string) *Message {
 	return &Message{Message: msg}
 }
+
+// JsonError use only for doc and represent e.JsonError
+type JsonError struct {
+	Error string `json:"error"`
+}
